[package]
name = "bluetooth-audio-connector-tg5040"
description = "Temporary used bluetooth audio connector for `TRIMUI SMART Pro`."
version = "0.1.0"
edition = "2021"
authors = ["jmjoy <jmjoy@apache.org>"]
license = "MulanPSL-2.0"
repository = "https://github.com/jmjoy/bluetooth-audio-connector-tg5040"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
arc-swap = "1.6.0"
bluer = { version = "0.17.0-pre1", features = ["bluetoothd"] }
crossbeam = "0.8.2"
sdl2 = { version = "0.35.0", features = ["ttf"] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
